--- a/Evaluation/style.css
+++ b/Evaluation/style.css
@@ -1,3 +1,8 @@
+body {
+    font-family: Arial, sans-serif;
+    min-height: 2000px;;
+}
+
 .headr {
     height: 80vh;
     min-height: 500px;
@@ -6,19 +11,89 @@
     background-position: center;
     background-repeat: no-repeat;
 }
+#logo-wwf {
+    position: absolute;
+    width: 7em;
+    height: 7em;
+}
 
 /* SCROLL DOWN HEADER */
 .scroll-down-headr {
    background: transparent;
    position: absolute;
    left: 50%;
+   right: 50%;
    bottom: 23%;
+   opacity: 0.7;
 }
 .scroll-down-headr:visited {
     color: black;
 }
+.scroll-down-headr:hover {
+    opacity: 1;
+}
 .bi-arrow-down-square {
     width: 40px;
-   height: 40px;
-   background: transparent;
+    height: 40px;
+    background: transparent;
+}
+
+/* DON WWF */
+#don-wwf {
+    min-height: 15vh;
+    border: solid black 1px;
+}
+#div-don {
+    border-left: 1px solid #000;
+    
+    background: rgba(222, 94, 9);
+}
+#div-don > #btn-don, #div-wwf > #btn-wwf {
+    width: 90%;
+    height: 2em;
+    border-radius: 10px;
+    border: 0;
+    
+}
+#div-don > #btn-don:hover, #div-wwf > #btn-wwf:hover {
+    transform: scale(1.1, 1.1);
+}   
+
+#div-wwf {
+    border-right: 1px solid #000;
+    background: lightseagreen;
+}
+#div-don, #div-wwf {
+    width: 50%;
+}
+.div-hyperlink:visited {
+    color: black;
+}
+.div-hyperlink:hover {
+    color: black;
+}
+.div-hyperlink {
+    text-decoration: none;
+    width: 90%;
+    color: black;
+}
+
+
+
+
+/* MEDIA QUERIES */
+@media screen and (max-height: 700px) {
+    .scroll-down-headr {
+        display: none;
+    }
+}
+/*??????
+@media screen and (min-width: 900px) {
+    #don-wwf {
+        max-width: 60vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+    }
 }
