--- a/Evaluation/style.css
+++ b/Evaluation/style.css
@@ -83,11 +83,15 @@ body {
     /* P1 */
 .content {
     border: solid black;
+    width: 100%;
 }
-#paragraphe1 {
+.paragraphe {
     background: lightgrey;
     border: dotted red;
+    margin-bottom: 5rem;
+    margin-top: 5rem;
 }
+
 h3::after {
     content: "";
     display: block;
@@ -97,6 +101,9 @@ h3::after {
     width: 50px;
     height: 3px;
     background: black;
+}
+.content  p {
+    line-height: 2;
 }
 
 
@@ -109,13 +116,11 @@ h3::after {
         display: none;
     }
 }
-/*??????
-@media screen and (min-width: 900px) {
-    #don-wwf {
-        max-width: 60vw;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
 
+@media screen and (min-width: 992px) {
+    .content {
+        width: 60vw;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
