--- a/Evaluation/style.css
+++ b/Evaluation/style.css
@@ -48,14 +48,14 @@ body {
     
     background: rgba(222, 94, 9);
 }
-#div-don > #btn-don, #div-wwf > #btn-wwf {
+#div-don > .btn-don, #div-wwf > .btn-wwf {
     width: 90%;
     height: 2em;
     border-radius: 10px;
     border: 0;
     
 }
-#div-don > #btn-don:hover, #div-wwf > #btn-wwf:hover {
+#div-don > .btn-don:hover, #div-wwf > .btn-wwf:hover {
     transform: scale(1.1, 1.1);
 }   
 
@@ -80,15 +80,14 @@ body {
 
 
 /* CONTENT */
-    /* P1 */
 .content {
-    border: solid black;
+   /* border: solid black;*/
     width: 100%;
 }
 .paragraphe {
-    background: lightgrey;
-    border: dotted red;
-    margin-bottom: 5rem;
+    /*background: lightgrey;
+    border: dotted red;*/
+    margin-bottom: 10rem;
     margin-top: 5rem;
 }
 
@@ -103,10 +102,47 @@ h3::after {
     background: black;
 }
 .content  p {
-    line-height: 2;
+    line-height: 2.7;
 }
 
 
+/* BACK TO TOP */
+.bi-arrow-up-circle-fill {
+    width: 40px;
+    height: 40px;
+    background: transparent;
+}
+.back-to-top {
+    background: transparent;
+    position: absolute;
+    right: 2.5%;
+    bottom: 0;
+    opacity: 0.7;
+ }
+.back-to-top:hover {
+    opacity: 1;
+ }
+
+ /* FOOTER */
+footer {
+    min-height: 200px;
+    border: dotted red 1px;
+}
+footer a {
+    color: black;
+    text-decoration: none;
+}
+footer .list-group-item:hover {
+    opacity: 0.7;
+    cursor: pointer;
+}
+footer .list-group-item:hover a {
+    color: black;
+}
+
+footer p {
+    margin-top: 100px;
+}
 
 
 
