--- a/Evaluation/style.css
+++ b/Evaluation/style.css
@@ -45,7 +45,7 @@ h1 {
 .scroll-down-headr:visited {
     color: black;
 }
-.scroll-down-headr:hover {
+.scroll-down-headr:hover, .back-to-top:hover {
     opacity: 1;
 }
 .bi-arrow-down-square {
@@ -254,6 +254,7 @@ footer {
     background-size: cover;
     background-repeat: no-repeat;
 }
+
 footer p {
     font-size: 15px;
     font-weight: 700;
@@ -268,16 +269,19 @@ footer .list-group-item:hover {
 }
 footer a:hover {
     color: black;
+    text-decoration: none;
 }
 footer .list-group-item {
-    background: rgb(233, 236, 240);
+    background: rgb(254, 195, 0);
 }
+
 footer #signature {
     margin-top: 5em;
     font-weight: 900;
     text-shadow: black 2px 1px;
     color: ivory;
 }
+
 #signature::after, #credit::after, #etoile::after {
     content: "";
     display: block;
@@ -291,6 +295,7 @@ footer #signature {
 
     background: ivory;
 }
+
 #info, #credit, #etoile {
     margin-top: 1em;
     margin-bottom: 1em;
@@ -298,12 +303,25 @@ footer #signature {
     text-shadow: black 2px 1px;
     color: ivory;
 }
+
 #credit, #etoile {
     margin: 0;
 }
+
 footer ul li {
     height: 6em;
     padding: 1em;
+}
+
+.back-to-top {
+    position: fixed;
+    bottom: 1em;
+    right: -95%;
+
+    color: rgba(248, 244, 250);
+    opacity: 0.85;
+
+    z-index: 3;
 }
 
 
@@ -335,10 +353,6 @@ h4 {
     background: rgb(255, 245, 227);
     width: 90vw;
 }
-.disclaimer h3 {
-    
-}
-
 #accordion {
     margin-left: 5%;
     margin-right: 5%;
@@ -377,7 +391,11 @@ h4 {
     border-radius: 5px;
     padding: 1em;
 }
+#ccvInfoHelp span:hover {
+    animation: helicoptere 10s linear 0s infinite;
+}
 
+/* INSCRIPTION POP UP */
 #btn-validation {
     font-weight: 700;
     font-size: 1.2em;
@@ -416,10 +434,6 @@ h4 {
     font-weight: 600;
 }
 
-@keyframes helicoptere {
-    from {transform: rotate(0deg); }
-    to {transform: rotate(360deg); }
-  }
 .bi-x {
     cursor: pointer;
     position: relative;
@@ -428,6 +442,12 @@ h4 {
 .bi-x:hover {
     animation: helicoptere 10s linear 0s infinite;
 }
+
+
+@keyframes helicoptere {
+    from {transform: rotate(0deg); }
+    to {transform: rotate(360deg); }
+  }
 
 
 
@@ -532,7 +552,7 @@ h4 {
 @media screen and (min-width: 1400px) {
     .scroll-down-headr {
         display: initial;
-        top: 16.5em;
+        top: 18.5em;
     }
     .parallax {
         height: 23em;
@@ -587,7 +607,7 @@ h4 {
         width: 40vw;
     }
     #box-behind-qui {
-        height: 13em;
+        height: 15em;
     }
     #box-behind-pourquoi, #box-behind-comment {
         height: 15em;
