--- a/Evaluation/style.css
+++ b/Evaluation/style.css
@@ -1,6 +1,5 @@
 body {
     font-family: 'Avenir', sans-serif;
-    /*background-image: url('images/bg1.jpg');*/
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -11,11 +10,11 @@ body p {
 .headr {
     height: 80vh;
     width: 100vw;
+
     background-image: url('images/polarbear2.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    /*border-bottom: rgb(51, 58, 65) solid 2px;*/
 }
 
 
@@ -36,11 +35,12 @@ h1 {
 .scroll-down-headr {
    display: none;
    background: transparent;
+   opacity: 0.7;
+
    position: absolute;
    left: 50%;
    right: 50%;
    bottom: 25%;
-   opacity: 0.7;
 }
 .scroll-down-headr:visited {
     color: black;
@@ -51,6 +51,7 @@ h1 {
 .bi-arrow-down-square {
     width: 40px;
     height: 40px;
+
     background: transparent;
 }
 
@@ -64,11 +65,13 @@ h1 {
 #div-don {
     background-color: rgb(233, 236, 240);
     color: black;
+
     width: 100%;
 }
 h2 {
     font-family: 'Avenir', sans-serif;
     font-weight: bold;
+
     padding: 0;
 }
 em {
@@ -76,33 +79,16 @@ em {
     font-weight: 100;
 }
 
-/*.btn-don {
-    background: red;
-
-    border-bottom: solid 2px rgb(51, 58, 65);
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    border-radius: 2px;
-
-    width: 90%;
-    height: 5em;
-}*/
-#div-don > .btn-don:hover {
-    transition: cubic-bezier(0.95, 0.05, 0.795, 0.035);
-} 
-
 
 /* CONTENT */
 .content {
     width: 100vw;
- /* background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');*/
+
     background-size: cover;
     background-repeat: no-repeat;
     background: rgb(255, 255, 250);
 
     padding-top: 5em;
-
 }
 article {
     display: flex;
@@ -140,9 +126,11 @@ article {
 h3::after {
     content: "";
     display: block;
+
     margin-left: auto;
     margin-right: auto;
     margin-top: 11.5px;
+
     width: 80px;
     height: 2px;
     background: black;
@@ -187,10 +175,13 @@ h3::after {
 }
 .box-behind-parallax {
     position: absolute;
+
     opacity: 0.75;
     background: white;
+
     width: 100%;
     height: 31em;
+
     z-index: 1;
 }
 
@@ -227,16 +218,17 @@ video {
 /* BOX BEHIND */
 .box-behind {
    position: absolute;
-   opacity: 0.6;
    top: 4rem;
    right: -1rem;
+
    width: 90%;
    height: 25em;
 
    background: rgb(247, 219, 191);
+   opacity: 0.6;
+
    border-radius: 5px;
    border: rgb(36, 59, 78) solid 2px;
-
    box-shadow: 4px -5px 15px 8px rgba(204, 204, 204, 0.8);
 }
 #box-behind-qui {
@@ -274,14 +266,12 @@ footer a:hover {
 footer .list-group-item {
     background: rgb(254, 195, 0);
 }
-
 footer #signature {
     margin-top: 5em;
     font-weight: 900;
     text-shadow: black 2px 1px;
     color: ivory;
 }
-
 #signature::after, #credit::after, #etoile::after {
     content: "";
     display: block;
@@ -295,24 +285,21 @@ footer #signature {
 
     background: ivory;
 }
-
 #info, #credit, #etoile {
     margin-top: 1em;
     margin-bottom: 1em;
     padding: 1em;
+
     text-shadow: black 2px 1px;
     color: ivory;
 }
-
 #credit, #etoile {
     margin: 0;
 }
-
 footer ul li {
     height: 6em;
     padding: 1em;
 }
-
 .back-to-top {
     position: fixed;
     bottom: 1em;
@@ -334,17 +321,16 @@ footer ul li {
     height: 4em;
     opacity: 0.85;
 }
-
 h4 {
     border-top: solid gray 1px;
 }
 .btn-actu:hover {
     opacity: 0.8;
 }
-
 .disclaimer {
     border: black 2px solid;
     border-radius: 5px;
+
     margin-bottom: 5em;
     margin-left: auto;
     margin-right: auto;
@@ -363,6 +349,7 @@ h4 {
     color: red;
 }
 
+
 /* BREADCRUMB */
 .breadcrumb {
     border-bottom: solid 2px rgb(51, 58, 65);
@@ -374,6 +361,7 @@ h4 {
     border: 0;
 }
 
+
 /* CCV POP UP */
 #ccvInfoHelp {
     position: absolute;
@@ -383,25 +371,26 @@ h4 {
 }  
 .popupCCV {
     margin: 20% auto;
+    padding: 1em;
+
     width: 20em;
     height: 15em;
+
     overflow: scroll;
     background: rgb(231, 231, 231);
     border: solid 2px black;
     border-radius: 5px;
-    padding: 1em;
 }
 #ccvInfoHelp span:hover {
     animation: helicoptere 10s linear 0s infinite;
 }
+
 
 /* INSCRIPTION POP UP */
 #btn-validation {
     font-weight: 700;
     font-size: 1.2em;
 }
-
-
 .overlay {
     position: fixed;
     top: 5%;
@@ -412,7 +401,6 @@ h4 {
 
     z-index: 5;
 }
-
 .popup {
     margin: 5% auto;
     padding: 2em;
@@ -424,7 +412,6 @@ h4 {
     border: solid 2px black;
     border-radius: 5px;
 }
-
 #btnOpen {
     margin-left: 25%;
     margin-right: 25%;
@@ -433,7 +420,7 @@ h4 {
     height: 5em;
     font-weight: 600;
 }
-
+    /* 'x' to close popups */
 .bi-x {
     cursor: pointer;
     position: relative;
@@ -443,7 +430,6 @@ h4 {
     animation: helicoptere 10s linear 0s infinite;
 }
 
-
 @keyframes helicoptere {
     from {transform: rotate(0deg); }
     to {transform: rotate(360deg); }
@@ -452,30 +438,8 @@ h4 {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* MEDIA QUERIES */
+
 
     /*   if < 500px : adjust margins and positions */
 @media screen and (max-width: 499px) {
@@ -552,7 +516,7 @@ h4 {
 @media screen and (min-width: 1400px) {
     .scroll-down-headr {
         display: initial;
-        top: 18.5em;
+        bottom: 55%;
     }
     .parallax {
         height: 23em;
@@ -592,16 +556,7 @@ h4 {
     }
 }
 
-@media screen and (min-width: 675px) {
-    .parallax-help {
-        margin-bottom: 5em;
-    }
-}
-@media screen and (min-width: 1785px) {
-    .parallax-help {
-        margin-bottom: 10em;
-    }
-}
+/* adjust boxes in background */
 @media screen and (min-width: 1540px) {
     #Join p {
         width: 40vw;
@@ -613,8 +568,36 @@ h4 {
         height: 15em;
     }
 }
+
+/* adjust margin-bottom of video */
+@media screen and (min-width: 675px) {
+    .parallax-help {
+        margin-bottom: 5em;
+    }
+}
+@media screen and (min-width: 1785px) {
+    .parallax-help {
+        margin-bottom: 10em;
+    }
+}
+
+/* adjust video's p's width according to current width */
 @media screen and (min-width: 2184px) {
     #Join p {
         width: 30vw;
+    }
+}
+
+/* adjust grey breadcrumb-bar's position */
+@media screen and (min-width: 945px) {
+    #don-wwf {
+        height: 5em;
+    }
+}
+
+/* adjust ccvInfoHelp's position  */
+@media screen and (min-width: 800px) {
+    #ccvInfoHelp {
+        left: 50%;
     }
 }
